# members

./: .coverage  .gitignore  CLAUDE.md  README.md  members.csv
image-processor/: PROJECT_SUMMARY.md  README.md  SETUP.md  app.py  requirements.txt
image-processor/app/static/css/: style.css
image-processor/app/static/js/: app.js
image-processor/app/templates/: index.html
member/: CONTRIBUTING.md  pyproject.toml
member/.github/workflows/: tests.yml
member/members/: __init__.py  core.py
member/tests/: test_members.py
members/: cli.py
simple-react-app/: .gitignore  CLAUDE.md  IMPROVEMENTS.md  LOGOUT_FEATURE.md  README.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  run-backend.sh  run-frontend.sh  start.sh
simple-react-app/backend/: .env.example  jest.config.js  jest.setup.js  package-lock.json  package.json  server.js
simple-react-app/backend/__tests__/: auth.test.js  security.test.js
simple-react-app/backend/config/: settings.json
simple-react-app/backend/constants/: messages.js
simple-react-app/backend/middleware/: auth.js  validators.js
simple-react-app/backend/models/: Image.js  User.js
simple-react-app/backend/routes/: auth.js  image.js
simple-react-app/backend/services/: authService.js  imageOperationService.js  imageService.js  userService.js
simple-react-app/backend/utils/: asyncHandler.js  email.js  response.js  security.js
simple-react-app/frontend/: package-lock.json  package.json
simple-react-app/frontend/public/: index.html
simple-react-app/frontend/src/: App.css  App.js
simple-react-app/frontend/src/pages/: Login.js  (+5 more)
(+5 files in other folders)
